--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "clsx": "^2.1.1",
-    "cra-template": "1.2.0",
-    "i18next": "^24.2.1",
+    "gsap": "^3.12.7",
+    "i18next": "^23.4.6",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-intervalplural-postprocessor": "^3.0.0",
     "react": "^19.0.0",
@@ -41,6 +41,7 @@
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
-    "typescript": "^5.7.3"
+    "cra-template": "1.2.0",
+    "typescript": "^4.9.5"
   }
 }
